DA angefangen + r2bc anpassung für export

--- a/src/main/java/Content/R2BMainWindow.form
+++ b/src/main/java/Content/R2BMainWindow.form
@@ -63,6 +63,8 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="convertButton" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
+                              <Component id="BPExportButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="exportButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
@@ -106,6 +108,7 @@
                   <Component id="loadButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="exportButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="convertButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="BPExportButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -305,6 +308,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ReviewButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="BPExportButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Export BPs"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BPExportButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
