--- a/src/main/java/DA/DAMainWindow.form
+++ b/src/main/java/DA/DAMainWindow.form
@@ -31,10 +31,17 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="BPImportButton2" min="-2" max="-2" attributes="0"/>
-                  <Component id="jScrollPane2" min="-2" pref="175" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="BPImportButton2" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="30" max="32767" attributes="0"/>
+                      <Component id="AnalyseButton" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="jScrollPane2" min="-2" pref="175" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="92" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -45,6 +52,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="BPImportButton2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="BPImportButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="AnalyseButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -89,7 +97,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="BPImportButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Import Platform Specification"/>
+        <Property name="text" type="java.lang.String" value="Import OEM-CRS"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BPImportButton1ActionPerformed"/>
@@ -97,8 +105,16 @@
     </Component>
     <Component class="javax.swing.JButton" name="BPImportButton2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Import OEM-CRS"/>
+        <Property name="text" type="java.lang.String" value="Import Internal CRS"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="AnalyseButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Analyse Deltas"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AnalyseButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
